[package]
name = "game-engine"
version = "0.1.0"
authors = ["Mikail Khan <mikail.khan45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.16.0"
vulkano-win = "0.16.0"

shaderc = "0.6.0"
shaderc-sys = "0.6.0"

image = "0.21"

lyon = "0.15.5"

winit = "0.19.5"

[dependencies.vulkano-shaders]
version = "0.16.0"
features = ["shaderc-build-from-source"]
# [features]
# shaderc_fix = ["shaderc/build-from-source"]
# shaderc_fix = ["vulkano-shaders/shaderc-build-from-source"]
